<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:text="@string/lblUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/lblDim" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtUsername" />

    <TextView
        android:text="@string/lblPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/lblDim" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtPassword" />

    <TextView
        android:text="@string/lblRepeatPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/lblDim" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtRepeatPassword" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:paddingRight="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblSave"
            android:id="@+id/btnSave" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblCancel"
            android:id="@+id/btnCancel" />

    </LinearLayout>

</LinearLayout>
