<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Login"
    android:orientation="vertical">

    <TextView
        android:text="@string/lblUsername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/lblDim"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtUsername" />

    <TextView
        android:text="@string/lblPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/lblDim"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtPassword" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:paddingRight="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblRegister"
            android:id="@+id/btnRegister" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblLogin"
            android:id="@+id/btnLogin" />

    </LinearLayout>


</LinearLayout>
