<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Login"
    android:orientation="vertical">

    <TextView
        android:text="@string/lblHostname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/lblDim" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_hostname" />

    <TextView
        android:text="@string/lblPort"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/lblDim" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txt_port" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/error_text"
            android:text="@string/lblPort"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/lblDim" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblConnect"
            android:id="@+id/btn_connect" />

    </LinearLayout>


</LinearLayout>
